--- a/index.css
+++ b/index.css
@@ -7,6 +7,11 @@
   }
 }*/
 
+h1 {
+  padding: 10px;
+  margin: 10px;
+}
+
 body {
   background-color: rgb(24, 26, 27);
   color: rgb(255, 255, 255);
@@ -23,42 +28,92 @@ body {
 	margin: 10px;
 }
 
-/* това не изглежда хубаво когато застанат едно под друго
-.projects > div:first-child {
-  margin: 16px;
-}
-*/
 #projects > div {
-  border: 3px solid rgb(60, 65, 68);
+  border: 7px solid rgb(60, 65, 68);
   font-size: 16px;
   margin: 16px 12px;
   padding: 15px;
   background-color: rgb(36, 39, 41);
+  border-style: outset;
+}
+
+#projects > div:hover {
+  transition: 0.7s;
+  color:rgb(8, 242, 0);
+}
+
+#projects > div:active {
+  background-color: yellow;
 }
 
 /* Курсора на choose files бутона не се показва където искам */
-#projects > div:hover , form > input{
+#projects > div, #projectName, input[type="submit"], button {
   cursor: pointer;
 }
 
 #projects > div > h3 {
   font-size: 25px;
+  text-decoration: underline;
 }
-
+/*
 #projects > div > .description {
   font-size: 15px;
   padding: 10px;
   color: red;
   position: relative;
   bottom: -20px;
-}
+}*/
 
-form {
+form, button{
   margin: 10px;
   padding: 7px;
   background-color: rgb(36, 39, 41);
   color: rgb(6, 26, 0);
   font-size: 16px;
-  border: 5px solid rgba(0, 64, 255, 0.7);
+  border: 7px solid rgba(0, 64, 255, 0.7);
   color: rgb(255, 255, 255);
+  border-radius: 4px;
+  border-style: outset;
+}
+
+label, input, textarea {
+  margin: 10px;
+  padding: 7px;
+  display: block;
+}
+
+label {
+  border-bottom: 2px solid rgba(0, 64, 255, 0.7);
+}
+
+h1, #projectTitle, textarea, input[type="submit"], #projectFile  {
+  border: 5px solid rgba(0, 64, 255, 0.7);
+  border-radius: 10px;  
+  border-style: outset;
+} 
+
+#projectTitle {
+  width: 40%;
+}
+
+textarea {
+  resize: none;
+  transition: 1s;
+  width: 95%; /* при малък екран излиза от елемента*/
+  height: 150px;
+}
+
+#projectDate {
+  display: none;
+}
+
+input[type="submit"], button {
+  transition: 1s;
+}
+
+input[type="submit"]:hover, button:hover {
+  background-color: rgb(8, 242, 0);
+  text-decoration: underline;
+  font-size: 20px;
+  color: white;
 }
