--- a/index.css
+++ b/index.css
@@ -56,14 +56,6 @@ h1, h3, p {
   font-size: 25px;
   text-decoration: underline;
 }
-/*
-#projects > div > .description {
-  font-size: 15px;
-  padding: 10px;
-  color: red;
-  position: relative;
-  bottom: -20px;
-}*/
 
 form, button{
   margin: 10px;
@@ -87,7 +79,7 @@ label {
   border-bottom: 2px solid rgba(0, 64, 255, 0.7);
 }
 
-h1, #projectTitle, textarea, input[type="submit"], #projectFile  {
+h1, #projectTitle, textarea, input[type="submit"], #projectFile, input[type="button"]  {
   border: 5px solid rgba(0, 64, 255, 0.7);
   border-radius: 10px;  
   border-style: outset;
@@ -108,14 +100,14 @@ textarea {
   display: none;
 }
 
-input[type="submit"], button {
+input[type="submit"], button, input[type="button"] {
   background-color: rgb(24, 26, 27);
   transition: 1s;
   color: white;
   font-family: "Lucida Console", "Courier New", monospace;
 }
 
-input[type="submit"]:hover, button:hover {
+input[type="submit"]:hover, button:hover, input[type="button"]:hover{
   background-color: rgb(8, 242, 0);
   text-decoration: underline;
   font-size: 20px;
@@ -123,34 +115,23 @@ input[type="submit"]:hover, button:hover {
 }
 
 .uname {
-  font-size:60%;
+  font-size: 12px;
+  display: inline-block;
+}
+
+.logout, .admin{
   display:inline-block;
+  font-size: 11px;
 }
-.logout{
-  background-color: white; /* Green */
-  color: black;
-  display:inline-block;
-  padding:2px 2px;
-  font-size:50%;
-  height:50%;
-}
-.login{
-  margin: 10px;
-  padding: 7px;
-  background-color: rgb(36, 39, 41);
-  color: rgb(6, 26, 0);
-  font-size: 16px;
-  border: 7px solid rgba(0, 64, 255, 0.7);
-  color: rgb(255, 255, 255);
-  border-radius: 4px;
-  align-content:center;
-  border-style: outset;
-}
+
+/* Това трябва да се види след като оправим коментарите да се качват в базата*/
 .comment_header{
+  color: red;
   display:inline-block;
 }
+
 /*това е за error съобщения от upload.php*/
 .error {
-	color:red;
-	font-size: 20px;
+  color:red;
+  font-size: 20px;
 }
