--- a/index.css
+++ b/index.css
@@ -152,3 +152,11 @@ input[type="submit"]:hover, button:hover, input[type="button"]:hover{
   color:red;
   font-size: 20px;
 }
+.update_form_hidden{
+  visibility: hidden;
+}
+
+.update_form_visible{
+  visibility: visible;
+}
+
