--- a/index.css
+++ b/index.css
@@ -165,6 +165,6 @@ input[type="submit"]:hover, button:hover, input[type="button"]:hover{
 	width: 96%;
 }
 
-input[type="button"], button {
+input[type="button"], button, input[type="submit"] {
 	box-shadow: 2px 2px 10px 5px blue;
 }
