--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ h1, h3, p {
 
 #projects > div {
   border: 7px solid rgb(60, 65, 68);
+  min-width:45.9%;
   font-size: 16px;
   margin: 16px 12px;
   padding: 15px;
@@ -45,6 +46,7 @@ h1, h3, p {
 
 #projects > div > h3 {
   font-size: 25px;
+  text-align:center;
   text-decoration: underline;
 }
 
@@ -112,6 +114,10 @@ input[type="submit"]:hover, button:hover, input[type="button"]:hover{
 .uname {
   font-size: 12px;
   display: inline-block;
+}
+
+.sorting{
+  display:inline-block;
 }
 
 .logout, .admin{
