--- a/index.css
+++ b/index.css
@@ -26,8 +26,10 @@ h1, h3, p {
   font-size: 16px;
   background-color: rgb(36, 39, 41);
   border-style: outset;
+  
   margin: 1%;
   width: 44%;
+  text-align: center;
 }
 
 #projects > div:hover {
