--- a/index.css
+++ b/index.css
@@ -177,3 +177,7 @@ input[type="submit"]:hover, button:hover, input[type="button"]:hover{
 input[type="button"], button, input[type="submit"] {
 	box-shadow: 2px 2px 10px 5px blue;
 }
+
+.grade, #grade {
+	display:inline-block;
+}
